# server/routes/reportRoutes.js
@@ -1,7 +1,10 @@
 const express = require("express");
+
 const {
   getReportSummary,
   deleteReportOrders,
+  exportReportsPdf,
+  exportReportsExcel,
 } = require("../controllers/reportController");
 
 const { protect, adminOnly } = require("../middleware/authMiddleware");
@@ -10,5 +13,7 @@ const router = express.Router();
 
 router.get("/", protect, adminOnly, getReportSummary);
 router.delete("/orders", protect, adminOnly, deleteReportOrders);
+router.get("/export/pdf", protect, adminOnly, exportReportsPdf);
+router.get("/export/excel", protect, adminOnly, exportReportsExcel);
 
 module.exports = router;
